--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -252,7 +252,7 @@
 					</ul></li>
 
 
-				<li ng-class="" ng-switch-when="true" uib-dropdown
+				<!-- <li ng-class="" ng-switch-when="true" uib-dropdown
 					class="dropdown pointer disabled" has-authority="ROLE_USER"><a
 					class="dropdown-toggle" uib-dropdown-toggle href=""
 					id="teleport-menu"> <span> <span
@@ -281,7 +281,7 @@
 								translate="global.menu.entities.tele.view">View All
 									Teleports</span></a></li>
 
-					</ul></li>
+					</ul></li> -->
 
 
 				<li ng-class="" ng-switch-when="true" uib-dropdown
