--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -206,7 +206,13 @@
 								class="glyphicon glyphicon-plus-sign"></span> &#xA0;<span
 								translate="global.menu.entities.project.multiple">Multiple
 									Project/User Assignment</span></a></li>
-					</ul></li>
+
+
+                        <!--<li ui-sref-active=""><a ui-sref="projects-test" data-toggle="collapse" data-target=".navbar-collapse.in">Test Projects</a></li>-->
+
+
+
+                    </ul></li>
 
 				<li ng-class="" ng-switch-when="true" uib-dropdown
 					class="dropdown pointer" has-authority="ROLE_USER"><a
